updates about page

--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -4,7 +4,7 @@ github_users:
 repo_description_lines_max: 2
 
 github_repos:
-  - theomooonndev/taskpie
+  - theomoondev/taskpie
   - theomoondev/betsy
   - theomoondev/media-ranker
   - theomoondev/inspiration-board
