--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -4,3 +4,9 @@ github_users:
 repo_description_lines_max: 2
 
 github_repos:
+  - theomoondev/taskpie
+  - theomoondev/betsy
+  - theomoondev/media-ranker
+  - theomoondev/inspiration-board
+  - theomoondev/todo-cli
+  - theomoondev/sketches
