--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -21,7 +21,7 @@ github_username: theomoondev
 # lastfm_id: # your lastfm id
 # lattes_id: # your ID on Lattes (Brazilian Lattes CV)
 # leetcode_id: # your LeetCode id
-linkedin_username: theoleemoon
+linkedin_username: theomoondev
 # mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 # medium_username: # your Medium username
 # orcid_id: # your ORCID ID
